# AIRP-MCP-Server

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  SKILL.md  mcp_config.example.json
.github/workflows/: ci.yml
docs/: MCP-SERVER-REQUIREMENTS.md  ROADMAP.md  configuration.md  deployment-tavern-agent.md  prompt-caching.md  skills-vs-mcp.md
src/: error.rs  lib.rs  main.rs
src/mcp/: decompose.rs  mod.rs  preset_regex.rs  prompts.rs  resources.rs  tools.rs
src/models/: character.rs  gating.rs  lorebook.rs  message.rs  mod.rs  preset.rs  scene.rs  session.rs  state.rs
src/storage/: character_store.rs  mod.rs  preset_store.rs  session_store.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: common.rs  integration_test.rs  plugin_data_test.rs  stdio_e2e.rs
